--- a/requirements.txt
+++ b/requirements.txt
@@ -49,15 +49,7 @@ rsa==4.9
 scikit-learn==1.0.2
 scipy==1.7.3
 six==1.16.0
-sqlparse==0.4.3
-tensorboard==2.11.2
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.11.0
-tensorflow-estimator==2.11.0
-tensorflow-intel==2.11.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.2.0
+sqlparse==0.4.3termcolor==2.2.0
 threadpoolctl==3.1.0
 tqdm==4.65.0
 typing-extensions==4.5.0
