--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,8 @@ rsa==4.9
 scikit-learn==1.0.2
 scipy==1.7.3
 six==1.16.0
-sqlparse==0.4.3termcolor==2.2.0
+sqlparse==0.4.3
+termcolor==2.2.0
 threadpoolctl==3.1.0
 tqdm==4.65.0
 typing-extensions==4.5.0
